# Ocr

./: .gitignore  CMakeLists.txt  README.md
src/core/: DataPoint.h  Ocr.h  Stoppable.h  Timer.h
src/core/impl/: DataPoint.cpp  Ocr.cpp  Stoppable.cpp  Timer.cpp
src/main/: Application.cpp  Application.h  Config.cpp  Config.h  Main.cpp
src/utils/: Common.h  FileCheck.h  Sustain.h
src/utils/impl/: Common.cpp  FileCheck.cpp  Sustain.cpp
